fixed menu not closing on mobile, replaced some fonts

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -51,27 +51,23 @@
 
   /* Typography */
  .container-grid .folor-card .firstRow {
-    
-    font-weight: bold;
     line-height: 1.0;
     white-space: nowrap; /* Prevents breaking */
 }
   
 .container-grid .folor-card .secondRow {
-    
     line-height: 1.0;
     white-space: nowrap;
 
   }
 
   .container-grid .folor-card .thirdRow {
-    
     line-height: 1.0;
     white-space: nowrap;
   }
 
   .container-grid .folor-card .randLorem {
-    line-height: 1.0;
+    
     padding: px;
     padding-bottom: 40px;
     text-align: left;
@@ -93,99 +89,71 @@
 @font-face {
     font-family: 'Porscha';
     src: url('/public/fonts/911porschav3cond.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'FatKat';
     src: url('/public/fonts/Fat Kat - (Demo) hanscostudio.com.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'GrandParadiso';
     src: url('/public/fonts/GrandParadiso-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'HeavyHeap';
     src: url('/public/fonts/heavy heap rg.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'JapanRich';
     src: url('/public/fonts/JapanRich-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Narnia';
     src: url('/public/fonts/Narnia.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Neon';
     src: url('/public/fonts/Neon.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'pinkoyablack';
     src: url('/public/fonts/pincoyablack.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'PowerPuffGirls';
     src: url('/public/fonts/powerpuff girls font.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Highrise';
     src: url('/public/fonts/HighriseFont-Demo-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Sunwish';
     src: url('/public/fonts/Sunwish Maverick.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Rollergirls';
     src: url('/public/fonts/ROLLERGI.TTF') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Lemonmilk';
     src: url('/public/fonts/LEMONMILK-RegularItalic.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
 
   @font-face {
     font-family: 'Coiny';
     src: url('/public/fonts/Coiny-Cyrillic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
 
 
@@ -194,115 +162,94 @@
   @font-face {
     font-family: 'Glorify';
     src: url('/public/fonts/Glorify SH Demo.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'LeJourSerif';
     src: url('/public/fonts/Le Jour Serif Personal Use Only.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Bulagria';
     src: url('/public/fonts/Bulagria.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'TightenCaps';
     src: url('/public/fonts/TightenCaps-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'SuperRich';
     src: url('/public/fonts/SuperRichExpanded_PERSONAL_USE_ONLY - Stretch.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'RacingSport';
-    src: url('/public/fonts/RacingSportDisplay-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Lovan';
     src: url('/public/fonts/Lovan.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Astonpoliz';
     src: url('/public/fonts/Astonpoliz.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Psilograph';
-    src: url('/public/fonts/Psilograph-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Quicksilver';
     src: url('/public/fonts/Quicksilver.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Bayside';
-    src: url('/public/fonts/BaysideFont-Regular-Demo.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Notted';
     src: url('/public/fonts/Notted.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'EastmanRoman';
     src: url('/public/fonts/EastmanRomanTrial-Bold.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'DKlongreach';
     src: url('/public/fonts/DK Longreach.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Cinematografica';
     src: url('/public/fonts/Cinematografica-Regular-trial.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Longhaul';
     src: url('/public/fonts/Longhaul.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Evogria';
     src: url('/public/fonts/Evogria.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'Coluna';
     src: url('/public/fonts/Coluna.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
   }
   @font-face {
     font-family: 'BankPrinter';
     src: url('/public/fonts/F25_Bank_Printer.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
   }
-  
+
+
+
+  @font-face {
+    font-family: 'Carbon';
+    src: url('/public/fonts/carbon bl.otf') format('opentype');
+  }
+  @font-face {
+    font-family: 'GrandMalefic';
+    src: url('/public/fonts/Grand Malefic.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'ButlerStencil';
+    src: url('/public/fonts/ButlerStencil.woff') format('woff');
+  }
+
+
+  @font-face {
+    font-family: 'RacingCar';
+    src: url('/public/fonts/Racing Car.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Bayside';
+    src: url('/public/fonts/BaysideFont-Regular-Demo.otf') format('opentype');
+  }
+
+  @font-face {
+    font-family: 'VintageWarehouse';
+    src: url('/public/fonts/Vintage Warehouse.ttf') format('truetype');
+  }
